update dark mode gradient stops

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -9,8 +9,8 @@
 
 :root.dark {
 	/* background: linear-gradient(240deg, #460957 0, #A414CC 100%), #460957; */
-	--hero-bg-start: #3a1245;
-	--hero-bg-end: #460957;
+	--hero-bg-start: #360f44;
+	--hero-bg-end: #270f55;
 }
 
 .dark .hero-wrap {
